k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
name: app-svc
spec:
type: ClusterIP
selector:
app: myapp
ports:
- port: 80
targetPort: 3000
